# donutAI

./: .env.example  .gitignore  AI_CUSTOMIZATION_SUMMARY.md  BUILD_AND_TEST_REPORT.md  CHANGES_SUMMARY.md  CI_CD_SETUP.md  CLIENT_DEPLOYMENT_GUIDE.md  COMPANY_BIO_IMPLEMENTATION.md  CONCISE_RESPONSE_IMPROVEMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILE_UPLOAD_DOWNLOAD_FEATURE.md  LUXURY_UI_ENHANCEMENTS.md  MICROPHONE_FIX_SUMMARY.md  MOBILE_COMPATIBILITY_GUIDE.md  MOBILE_SCREENSAVER_FIX.md  NAME_SPELLING_IMPROVEMENTS.md  PWA_IMPROVEMENTS_SUMMARY.md  RAILWAY_DEPLOYMENT_FIX.md  README.md  STABILITY_REVIEW_REPORT.md  TROUBLESHOOTING_GUIDE.md  TTS_VOICE_QUALITY_IMPROVEMENT.md  USER_GUIDANCE_UPDATE.md  WHITE_LABEL_GUIDE.md  compose.debug.yaml  compose.yaml  docker-compose.yml  package-lock.json  railway.json  requirements.txt  setup.bat  start.bat  start.sh  test_servers.py
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt  sentry_config.py
backend/app/: __init__.py  config.py  database.py  llm.py  main.py  schemas.py
backend/app/agents/: __init__.py  orchestrator.py  prompts.py  state.py
backend/app/api/: upload.py
backend/app/memory/: __init__.py  ring_buffer.py  structured_db.py  vector_store.py
backend/app/services/: __init__.py  auth.py  scheduler_service.py  stt_service.py  tts_service.py  voice.py  voice_fallback.py
backend/app/tools/: appointment_tool.py  calendar_tool.py  diary_tool.py  email_tool.py  memory_tool.py  music_tool.py  reminder_tool.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_voice_services.py
(+43 files in other folders)
